<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="414dp"
        android:layout_height="437dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< HEAD
=======
        tools:ignore="ContentDescription,MissingConstraints"
>>>>>>> b1a2234d0603e174d07112e5904d11bf9becf51d
        tools:layout_editor_absoluteX="-2dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Bernese Mountain Dog"
        android:contentDescription="@string/movie_name"
        app:layout_constraintTop_toBottomOf="@id/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

<<<<<<< HEAD

    <RatingBar
        android:id="@+id/movie_voto"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:contentDescription="@string/movie_rating"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:progressTint="#FFD65A"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:stepSize="0.6"
        app:layout_constraintTop_toBottomOf="@id/movie_name"
        tools:layout_editor_absoluteX="33dp" />
=======
    <RatingBar
        android:id="@+id/movie_voto"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:stepSize="0.6"
        app:layout_constraintStart_toStartOf="@id/movie_name"
        app:layout_constraintTop_toBottomOf="@id/movie_name"
        tools:text="Bernese Mountain Dog" />

    <TextView
        android:id="@+id/movie_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_voto"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

>>>>>>> b1a2234d0603e174d07112e5904d11bf9becf51d

    <TextView
        android:id="@+id/movie_descrition"
        android:contentDescription="@string/movie_descrition"
        android:layout_width="393dp"
        android:layout_height="211dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_voto" />


</androidx.constraintlayout.widget.ConstraintLayout>
