<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_list_coin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bernese Mountain Dog"
            android:contentDescription="@string/movie_name"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="119dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/movie_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/movie_data"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/movie_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>